public/css/style.css
body{
  font-family: "plus Jakarta Sans",sans-serif !important;
  display: flex;
  flex-direction: column;
  min-height: 100vh;
   margin-left: 2rem;

}

.container{
  flex: 1;

}

.navbar{
  height: 5rem;
  background-color: white;
}

.fa-compass{
  color: #fe424d;
  font-size: 2rem;
}
.nav-link{
  color: #222222 !important;
}
.f-info-links a{
  text-decoration: none;
  color: #222222;
}
.f-info-links a:hover{
  text-decoration: underline;
}

.f-info-links, 
.f-info-socials,
.f-info-brand{
  width: 100%;
  display: flex;
  align-items: center;
  justify-content: center;
}


.f-info-socials i{
   margin-right: 1rem;
   font-size: 1.2rem;
}

.f-info{
  text-align: center;
  height: 8rem;
  background-color: #ebebeb;
  display: flex;
  flex-wrap: wrap;
  justify-content: center;
  align-items: space-evenly;
}

/*cards*/
.listing-card{
  border: none !important;
  margin-bottom: 2rem;
}

.card-img-top{
  border-radius: 1rem !important;
  width: 100% !important;
  object-fit: cover !important;
  
}

.card-body{
  padding: 0 !important;
 
}

.card-text p{
  font-weight: 400 !important;
 
}

.listing-link{
  text-decoration: none;
}

.card-img-overlay{
  opacity: 0;
}

.card-img-overlay:hover{
  opacity: 0.2;
  background-color: white;
}


.add-btn{
  background-color: #fe424d !important;
  border: none !important;
}

.edit-btn{
   background-color: #fe424d !important;
  border: none !important;
}

.show-img{
  height: 30vh;
}

.btns{
  display: flex;
}
.show-card{
  padding-left: 0;
  padding-right: 0;
   
}

